@@ -96,6 +96,7 @@ public final class SchemaKeyspace
                 "CREATE TABLE %s ("
                 + "keyspace_name text,"
                 + "table_name text,"
+                + "allow_auto_snapshot boolean,"
                 + "bloom_filter_fp_chance double,"
                 + "caching frozen<map<text, text>>,"
                 + "comment text,"
@@ -159,6 +160,7 @@ public final class SchemaKeyspace
                 + "base_table_id uuid,"
                 + "base_table_name text,"
                 + "where_clause text,"
+                + "allow_auto_snapshot boolean,"
                 + "bloom_filter_fp_chance double,"
                 + "caching frozen<map<text, text>>,"
                 + "comment text,"
@@ -904,7 +906,8 @@ public final class SchemaKeyspace
 
     private static void addTableParamsToSchemaMutation(TableParams params, RowUpdateBuilder adder)
     {
-        adder.add("bloom_filter_fp_chance", params.bloomFilterFpChance)
+        adder.add("allow_auto_snapshot", params.allowAutoSnapshot)
+             .add("bloom_filter_fp_chance", params.bloomFilterFpChance)
              .add("comment", params.comment)
              .add("dclocal_read_repair_chance", params.dcLocalReadRepairChance)
              .add("default_time_to_live", params.defaultTimeToLive)
@@ -1143,6 +1146,9 @@ public final class SchemaKeyspace
     private static TableParams createTableParamsFromRow(UntypedResultSet.Row row)
     {
         TableParams.Builder builder = TableParams.builder();
+
+        if (row.has("allow_auto_snapshot"))
+            builder.allowAutoSnapshot(row.getBoolean("allow_auto_snapshot"));
 
         builder.bloomFilterFpChance(row.getDouble("bloom_filter_fp_chance"))
                .caching(CachingParams.fromMap(row.getFrozenTextMap("caching")))
