@@ -1,4 +1,5 @@
 3.0
+ * Disable auto snapshot on selected tables (CASSANDRA-10383)
  * Provide additional metrics for materialized views (CASSANDRA-10323)
  * Flush system schema tables after local schema changes (CASSANDRA-10429)
 Merged from 2.2:
